# MLwithHE

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  SVC.cpp  script.sh  svm-HE-test.cpp  svm-HE.cpp  svm-palisade.cpp  svm.cpp  svmWithOVR.cpp  utils.cpp  utils.h  xgboost-HE-test.cpp  xgboost.cpp  xgboost_bfv.cpp  xgboost_encModel.cpp  xgboost_v3.cpp
Data_XGB/: demoTestData_x0.txt  demoTestData_x2.txt  encodedTree_BFV.txt  labels.txt
data/: SV.csv  SV_class.csv  SV_index.csv  XScaled.csv  X_test.csv  Y.csv  Y_pred.csv  Y_test.csv  Y_train.csv  Y_true.csv  coef.csv  results.csv  rho.csv  script.sh  sv_coef.csv  test_data.txt
data/SampleData/: X_test.csv  cal_micro_auc.py  data.py  results.csv
data/feature141/: FeaturesLast.txt  X_test.csv  Y.npy  Y_test.csv  cal_micro_auc.py  coef.csv  data.py  rho.csv
data/finalData/: X_test.csv  Y_pred.csv  Y_test.csv  coef.csv  rho.csv
data/finalModel_Features/: FeaturesLastSorted.txt  rho.csv
model/: coef.csv
palisade/: CMakeLists.txt  svm-HE2.cpp  svm-palisade.cpp
seal/: CMakeLists.txt  svm-seal.cpp  svmWithOVR.cpp
training/: PrepareInputVectors.py  README  featureSelection.py  modelSVM.py
xgboost-data/: encodedTree.txt  labels.txt
