cmake_minimum_required (VERSION 3.5.1)

set(CMAKE_CXX_STANDARD 11)
SET(CMAKE_C_FLAGS_DEBUG "-D_DEBUG")
find_package(SEAL 3.5.8 EXACT REQUIRED)

#if(APPLE)
#    find_package(OpenMP)
#    set(OpenMP_CXX_FLAGS "-Xpreprocessor -fopenmp -I/usr/local/opt/libomp/include")
#    set(OpenMP_CXX_LIB_NAMES "omp")
#    set(OpenMP_omp_LIBRARY /usr/local/opt/libomp/lib/libomp.dylib)
#else()
#    find_package(OpenMP)
#    IF(OPENMP_FOUND)
#        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
#        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
#        set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} ${OpenMP_SHARED_LINKER_FLAGS}")
#        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
#    ELSE()
#        message("Missed OpenMP!")
#    ENDIF()
#endif()

## SEAL EXECUTABLES
#add_executable( bm-chi2 benchmark-chi2.cpp)
#target_link_libraries(bm-chi2 SEAL::seal)